mType/tests/testFiles/import/error/circular_a.mt
import "tests/testFiles/import/error/circular_b.mt";
        function funcA(): int {
            return 1;
        }